--- a/sprint_0/Mocodo/Scenarios.html
+++ b/sprint_0/Mocodo/Scenarios.html
@@ -11,10 +11,8 @@
 <body>
 <div id='mld'>
 <div>
-  <span class='relation'>END</span> (
+  <span class='relation'>SCENE</span> (
     <span class='primary'>image</span>,
-    <span class='normal'>description</span>,
-    <span class='normal'>video</span>,
     <span class='normal'>created_at</span>,
     <span class='normal'>updated_at</span>,
     <span class='foreign'>name</span>
@@ -31,36 +29,25 @@
     <span class='normal'>image</span>,
     <span class='normal'>status</span>,
     <span class='normal'>created_at</span>,
-    <span class='normal'>updated_at</span>,
-    <span class='foreign'>image.1</span>
+    <span class='normal'>updated_at</span>
   )
 </div>
 <div>
-  <span class='relation'>SCORE</span> (
-    <span class='primary'>value</span>,
-    <span class='normal'>created_at</span>
-  )
-</div>
-<div>
-  <span class='relation'>SCENE</span> (
-    <span class='primary'>image</span>,
+  <span class='relation'>BOT</span> (
+    <span class='primary'>message</span>,
     <span class='normal'>created_at</span>,
     <span class='normal'>updated_at</span>,
     <span class='foreign'>name</span>
   )
 </div>
 <div>
-  <span class='relation'>INTRODUCTION</span> (
+  <span class='relation'>END</span> (
     <span class='primary'>image</span>,
     <span class='normal'>description</span>,
+    <span class='normal'>video</span>,
     <span class='normal'>created_at</span>,
-    <span class='normal'>updated_at</span>
-  )
-</div>
-<div>
-  <span class='relation'>MAKE</span> (
-    <span class='foreign primary'>value</span>,
-    <span class='foreign primary'>email</span>
+    <span class='normal'>updated_at</span>,
+    <span class='foreign'>name</span>
   )
 </div>
 <div>
@@ -75,20 +62,21 @@
   )
 </div>
 <div>
+  <span class='relation'>SYNOPSIS</span> (
+    <span class='primary'>image</span>,
+    <span class='normal'>description</span>,
+    <span class='normal'>created_at</span>,
+    <span class='normal'>updated_at</span>,
+    <span class='foreign'>name</span>
+  )
+</div>
+<div>
   <span class='relation'>USER</span> (
     <span class='primary'>email</span>,
     <span class='normal'>password</span>,
     <span class='normal'>nickname</span>,
     <span class='normal'>created_at</span>,
     <span class='normal'>updated_at</span>
-  )
-</div>
-<div>
-  <span class='relation'>BOT</span> (
-    <span class='primary'>message</span>,
-    <span class='normal'>created_at</span>,
-    <span class='normal'>updated_at</span>,
-    <span class='foreign'>name</span>
   )
 </div>
 <div>
@@ -99,6 +87,18 @@
     <span class='normal'>created_at</span>,
     <span class='normal'>updated_at</span>,
     <span class='foreign'>name</span>
+  )
+</div>
+<div>
+  <span class='relation'>SCORE</span> (
+    <span class='primary'>value</span>,
+    <span class='normal'>created_at</span>
+  )
+</div>
+<div>
+  <span class='relation'>MAKE</span> (
+    <span class='foreign primary'>value</span>,
+    <span class='foreign primary'>email</span>
   )
 </div>
 </div>
