--- a/sprint_0/Mocodo/Games.html
+++ b/sprint_0/Mocodo/Games.html
@@ -11,12 +11,6 @@
 <body>
 <div id='mld'>
 <div>
-  <span class='relation'>PLAYED</span> (
-    <span class='foreign primary'>email</span>,
-    <span class='foreign primary'>status</span>
-  )
-</div>
-<div>
   <span class='relation'>USER</span> (
     <span class='primary'>email</span>,
     <span class='normal'>password</span>,
@@ -26,26 +20,26 @@
   )
 </div>
 <div>
-  <span class='relation'>GAME</span> (
-    <span class='primary'>status</span>,
-    <span class='normal'>score</span>,
+  <span class='relation'>COMMENT</span> (
+    <span class='foreign primary'>email</span>,
+    <span class='foreign primary'>score</span>,
+    <span class='normal'>content</span>,
+    <span class='normal'>rating</span>,
     <span class='normal'>created_at</span>,
     <span class='normal'>updated_at</span>
   )
 </div>
 <div>
-  <span class='relation'>COMMENT</span> (
-    <span class='primary'>content</span>,
-    <span class='normal'>rating</span>,
+  <span class='relation'>GAME</span> (
+    <span class='primary'>score</span>,
     <span class='normal'>created_at</span>,
-    <span class='normal'>updated_at</span>,
-    <span class='foreign'>email</span>
+    <span class='normal'>ended_at</span>
   )
 </div>
 <div>
   <span class='relation'>OBJECT</span> (
     <span class='primary'>status</span>,
-    <span class='foreign'>status.1</span>
+    <span class='foreign'>score</span>
   )
 </div>
 </div>
